--- a/Banana_game/package.json
+++ b/Banana_game/package.json
@@ -20,6 +20,7 @@
     "babel-preset-expo": "^11.0.15",
     "banana_game": "file:",
     "expo": "^51.0.38",
+    "expo-av": "~14.0.7",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -36,6 +37,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "3.31.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
