--- a/Banana_game/package.json
+++ b/Banana_game/package.json
@@ -15,14 +15,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/config-plugins": "^8.0.10",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
     "babel-preset-expo": "^11.0.15",
     "banana_game": "file:",
-    "expo": "^51.0.38",
     "expo-av": "~14.0.7",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "~13.1.1",
     "expo-linking": "~6.3.1",
     "expo-router": "^3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -45,6 +46,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "expo": "^51.0.38",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "metro-react-native-babel-preset": "^0.77.0",
