Developed the backend for profile, leader Board, and tournament page.

--- a/banana-backend/.env
+++ b/banana-backend/.env
@@ -1,3 +1,3 @@
-PORT = 5000
-MONGO_URI = mongodb+srv://shanukadeva2000:F8jnm2zGLd8inwpn@bananagame.eikcl.mongodb.net/
+PORT=5000
+MONGO_URI=mongodb+srv://shanukadeva2000:F8jnm2zGLd8inwpn@bananagame.eikcl.mongodb.net/BananaGame?retryWrites=true&w=majority
 JWT_SECRET=3DMFJ24567D3G4A3DS564GVDFRG23DEF123F43GS
