--- a/Banana_game/package.json
+++ b/Banana_game/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "@expo/config-plugins": "^8.0.10",
     "@expo/vector-icons": "^14.0.4",
-    "@react-navigation/native": "^6.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-navigation/native": "^6.1.18",
     "axios": "^1.7.7",
     "babel-preset-expo": "^11.0.15",
     "banana_game": "file:",
@@ -32,6 +33,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "jwt-decode": "^4.0.0",
     "nativewind": "^4.1.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -39,8 +41,9 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "3.31.1",
+    "react-native-screens": "^3.31.1",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.28.0"
   },
