--- a/Banana_game/package.json
+++ b/Banana_game/package.json
@@ -38,12 +38,16 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.9.0",
+    "react-native-svg-animated-linear-gradient": "^0.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-waveview": "^1.1.0",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.28.0"
   },
